# deep-game

./: .gitignore  LICENSE  README.md  justfile  main.py  mise.toml  pyproject.toml
.github/workflows/: build.yml
scripts/: build_hot_reload.bat  build_hot_reload.sh  build_web.bat  build_web.sh
source/: game.odin
source/atlas/: atlas.odin
source/game/: animation.odin  api.odin  assets.odin  audio.odin  constants.odin  dead_screen.odin  direction.odin  event.odin  game.odin  hud.odin  input.odin  main_menu.odin  math.odin  objects.odin  player.odin  sprite.odin  tilemap.odin  transitioning.odin  ui.odin  utils.odin  utils_default.odin  utils_web.odin  win_screen.odin  world.odin  world_fight.odin  world_overworld.odin
source/main_hot_reload/: main_hot_reload.odin
source/main_release/: main_release.odin
source/main_web/: emscripten_allocator.odin  emscripten_logger.odin  index_template.html  main_web.odin
source/tiled/: loader.odin  tile.odin  tilemap.odin  tileset.odin
src/: build_web.py  index.html  main.py
src/browser/: __init__.pyi  html.pyi
src/engine/: __init__.py  application.py  color.py  rectangle.py
src/engine/renderer/: __init__.py  base.py  desktop.py  web.py
src/engine/run/: __init__.py  desktop.py  web.py
src/engine/texture/: __init__.py  base.py  desktop.py  web.py
src/lastshot/: __init__.py  game.py
src/tiled/: __init__.py  loader.py  tilemap.py  tileset.py
